cabal-version:      2.4
name:               yesod-auth-saml2
version:            0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            Apache-2.0
author:             Fumiaki Kinoshita
maintainer:         fumiaki.kinoshita@herp.co.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Yesod.Auth.SAML2

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.12 && <5,
        cryptonite,
        cryptostore,
        exceptions,
        text,
        unliftio,
        wai,
        wai-extra,
        wai-saml2 ^>= 0.4,
        x509,
        yesod-auth,
        yesod-core
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat

